deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology-deployment
  labels:
    app: main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        # env:
        #   - name: HTTP_PORT
        #     value: "80"        
        volumeMounts:
        - name: web-html
          mountPath: /usr/share/nginx/html
      - name: network-multitool
        image: wbitt/network-multitool
        # env:
        #   - name: HTTP_PORT
        #     value: "8080"
      volumes:
       - name: web-html
         configMap:
           name: nginx-html
---
apiVersion: v1
kind: Service
metadata:
  name: main-service
spec:
  selector:
    app: main
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
