ssl-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-service
spec:
  selector:
    app: main
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
